--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^2.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -15,6 +16,8 @@
     "react-scripts": "3.4.1",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "rxjs-compat": "^6.6.0"
   },
   "scripts": {
