--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ public/dist/
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build
 
 # Dependency directories
 node_modules/
